# flowy

flowy/: Cargo.toml
flowy/src/: lib.rs  main.rs  presets.rs  solar.rs
wallpaper_rs/: Cargo.toml
wallpaper_rs/src/: linux.rs
