[package]
name = "flowy"
version = "0.4.1"
authors = ["vineetred <vineetreddy@live.com>", "NotAProgramerLol<oliver.boros.nl@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Dynamic desktop wallpaper changer"
readme = "README.md"
homepage = "https://github.com/NotAProgramerLol/flowy"
repository = "https://github.com/NotAProgramerLol/flowy"
categories = ["command-line-utilities"]
exclude = ["demo.gif", "demo2.gif"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper_rs = { version = "0.1.1", path = "../wallpaper_rs" }
enquote = "1.0.3"
toml = "0.8"
serde = { version = "1.0.114", features = ["derive"] }
clap = { version = "=4.5", features = ["yaml"] }
flate2 = "1.0.16"
tar = "0.4.36"
directories-next = "2.0.0"
chrono = "0.4"
ureq = { version = "2.0.1", features = ["json"] }

[package.metadata.deb]
maintainer = "Vineet Reddy <vineetreddy@live.com>"
license-file = ["LICENSE", "3"]
depends = "$auto, systemd"
extended-description = """\
A dynamic desktop wallpaper changer that is written in the memory-safe programming language, Rust."""
section = "admin"
priority = "optional"
assets = [
    ["assets/flowy.service", "etc/systemd/user/", "644"],
    ["target/release/flowy", "usr/bin/", "755"],
]
maintainer-scripts = "scripts/"
